...
        android:text=" "/>
        <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Desired username"/>
        <EditText
        android:id="@+id/username"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:inputType="text"/>
        <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Desired password"/>
        <EditText
        android:id="@+id/password"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:inputType="textPassword"/>
        <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
...
